replaced Collections methods with List #2135